<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/toggle_turn_on"
        android:textOff="@string/toggle_turn_off"
        android:checked="true" />

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_display" />


    <EditText
        android:id="@+id/edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/enter_text"
        android:inputType="text"
        android:background="@drawable/rounded_corner_view"/>


    <Button
        android:id="@+id/edit_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:text="@string/show_the_text" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/auto_Complete_TextView"
        android:hint="Auto Complete TextView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delaySetting"
            android:gravity="center"
            android:textSize="20sp"

            />

        <Spinner
            android:id="@+id/minutes_spinner"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:spinnerMode="dialog"
            android:prompt="@string/delaySettingMinutes"
            android:entries="@array/delaySettingsArray">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:gravity="center"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/seconds_spinner"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:spinnerMode="dropdown"
            android:dropDownWidth="100dp"
            android:entries="@array/delaySettingsArray"
            >
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            android:gravity="center"
            android:textSize="20sp"/>

    </LinearLayout>
        <Button
            android:id="@+id/delayShutdowButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delay_Shutdown_Button_Text"
            android:layout_gravity="center_horizontal"
            android:onClick="delayShutdownSubmit"/>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orangePi_text"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raspberryPi_text"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bananaPi_text"/>

    </RadioGroup>

    <Button
        android:id="@+id/ClearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/clear_Button_Text"
        android:onClick="clearButton"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Switch
            android:id="@+id/switch_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:showText="true"
            android:switchMinWidth="60dp"
            android:text="@string/switch_1_Caption"
            android:textOff="@string/switch_Text_Off"
            android:textOn="@string/switch_Text_On"/>

        <Switch
            android:id="@+id/switch_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:showText="true"
            android:switchMinWidth="60dp"
            android:text="@string/switch_2_Caption"
            android:textOff="@string/switch_Text_Off"
            android:textOn="@string/switch_Text_On" />

        <Switch
            android:id="@+id/switch_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:showText="true"
            android:switchMinWidth="60dp"
            android:text="@string/switch_3_Caption"
            android:textOff="@string/switch_Text_Off"
            android:textOn="@string/switch_Text_On"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="V1.0" />
        />
</LinearLayout>